--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -160,7 +160,7 @@
 
 
 .touzhu-footer{
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     z-index: 10;
@@ -213,7 +213,7 @@
 }
 
 .touzhu-number{
-    position: fixed;
+    position: absolute;
     bottom: 50px;
     left: 0;
     z-index: 10;
