--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@
 .touzhu-number-select{
   color: #0abbb5 !important;
 }
-.adm-dot-loading{
+.adm-mask-content .adm-dot-loading{
   color: #0abbb5 !important;
 }
 .user-info{
