--- a/src/style.css
+++ b/src/style.css
@@ -125,3 +125,15 @@
   background-color: #0abbb5 !important;
   border: 1px solid #0abbb5 !important;
 }
+.withdraw-info {
+  border-top: 1px solid #0abbb5 !important;
+  border-right: 1px solid #0abbb5 !important;
+}
+.withdraw-info-value {
+  border-left: 1px solid #0abbb5 !important;
+  border-bottom: 1px solid #0abbb5 !important;
+}
+.withdraw-info-key {
+  border-left: 1px solid #0abbb5 !important;
+  border-bottom: 1px solid #0abbb5 !important;
+}
