--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -83,7 +83,7 @@
 	font-size: 15px;
 }
 .home-game-body{
-	margin-top: 5px;
+	/* margin-top: 5px; */
 	background-color: #f5fbf9;
 	padding: 10px;
 }
