--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -273,3 +273,12 @@
     padding-left:15px ;
     color: #555;
 }
+.k3-confirm-title{
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.k3-confirm-text{
+    font-weight: bolder;
+    margin: 5px 0px;
+}
