--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -172,8 +172,17 @@
 	/* background-size:100% 100%; */
 	/* height: 90px; */
 }
+.sc-type-img{
+}
 .sc-type-name{
-	padding-top: 15px;
+	/* margin-top: -75px; */
+	height: 80px;
+	padding-top: 20px;
+	background-size: contain;
+	background-position: center;
+  background-repeat: no-repeat, no-repeat;
+		/* left: 50%; */
+		/* top:0;left:0;right:0;bottom:0;margin: auto; */
 }
 .sc-badge{
 	padding: 5px;
