--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -186,3 +186,10 @@
 	border-color: #85daae;
 	padding: 0 50px;
 }
+.home-language-select{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: inherit;
+}
