--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -170,7 +170,7 @@
     height: 50px;
     overflow: hidden;
     /* line-height: 50px; */
-    text-align: center;
+    /* text-align: center; */
     background-color: #fff;
     border-top: 1px solid #dcdcdc;
     padding: 0 10px;
