--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -162,17 +162,17 @@
 
 
 .touzhu-footer{
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     z-index: 10;
     width: 100%;
-    height: 50px;
+    /* height: 50px; */
     overflow: hidden;
     /* line-height: 50px; */
     /* text-align: center; */
     background-color: #fff;
-    border-top: 1px solid #dcdcdc;
+    /* border-top: 1px solid #dcdcdc; */
     padding: 0 10px;
     box-sizing: border-box;
 }
@@ -217,7 +217,7 @@
 }
 
 .touzhu-number{
-    position: absolute;
+    /* position: absolute; */
     bottom: 50px;
     left: 0;
     z-index: 10;
@@ -226,14 +226,16 @@
     /* line-height: 50px; */
     text-align: center;
     background-color: #fff;
-    border-top: 1px solid #dcdcdc;
-    padding: 0 10px;
+    border-bottom: 1px solid #dcdcdc;
+    /* padding: 0 10px; */
     box-sizing: border-box;
     text-align: left;
     font-size: 15px;
-    box-shadow: 0 0 5px #888;
+    /* box-shadow: 0 0 5px #888; */
 }
-
+.touzhu-amount{
+    /* border-top: 1px solid #dcdcdc; */
+}
 .touzhu-number-row{
     margin: 10px 0px;
     overflow:hidden;
