--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -191,14 +191,14 @@
 
 .touzhu-button-right{
     text-align: right;
-    height: 50px;
+    /* height: 50px; */
     line-height: 50px;
 }
 .touzhu-button-right button{
     background-color: #e53333;
     color: #fff;
     border: 1px solid #e53333;
-    height: 32px;
+    /* height: 32px; */
     vertical-align: unset;
 }
 
