--- a/src/font.css
+++ b/src/font.css
@@ -1,68 +1,68 @@
 
 .code-body .adm-grid-item{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .adm-tab-bar-item-active{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .kefu a{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 
 .k3-kj-time{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .userlist-title{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .touzhu-button-left button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .touzhu-button-number{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .adm-tabs-tab-active{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .adm-picker-header-button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 .adm-calendar-arrow-button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 .adm-dialog-button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .touzhu-number-select{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 .adm-mask-content .adm-dot-loading{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 
 .about-title{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .home-game-right svg{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 .proxy-value {
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 .adm-button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
   /* border-color: #d0d0f0 !important; */
 }
 .adm-nav-bar-right .adm-button{
@@ -70,7 +70,7 @@
 }
 
 .k3-name-button{
-  color: #ad6ffb !important;
+  color: #c99e67 !important;
 }
 
 
@@ -78,5 +78,5 @@
   color: #fff !important;
 }
 .adm-notice-bar.adm-notice-bar-alert {
-  --text-color: #ad6ffb;
+  --text-color: #c99e67;
 }
