--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 45px;
+  top: 70px;
   overflow: auto;
   display: block;
   
@@ -75,4 +75,8 @@
 
 .slide-exit-active {
   transform: translateX(-100%);
+}
+
+.sc-m-img{
+  width: 20px;
 }
