Revert "Fixed Layout"
This reverts commit 9f7e179e6d86842b70caee817f6ac3ac65f92d34.

--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -6,7 +6,7 @@
 	align-items: center;
 }
 .home-menu{
-	margin-top: 35px;
+	margin-top: 8vw;
 	position: relative;
 	padding-bottom: 20px;
 }
@@ -135,8 +135,8 @@
 	text-align: left;
 }
 .home-list{
-	padding-top: 100px;
-	padding-bottom: 15px;
+	padding-top: 22vw;
+	padding-bottom: 3vw;
 	background-size: 100% 100%;
 	background-position: center;
   	background-repeat: no-repeat, no-repeat;
@@ -218,7 +218,6 @@
 	background-position: center;
   background-repeat: no-repeat, no-repeat;
   color: #000;
-  z-index: 1;
 		/* left: 50%; */
 		/* top:0;left:0;right:0;bottom:0;margin: auto; */
 }
@@ -240,10 +239,9 @@
 }
 .sc-type-name .sc-img{
 	position: absolute;
-	right: 13px;
+	right: 4vw;
 	bottom: 25px;
 	width: 70px;
-	z-index: -1;
 }
 .sc-badge{
 	padding: 5px;
@@ -298,15 +296,12 @@ letter-spacing: 1.5px;
 }
 @media only screen and (min-width: 600px) {
 	.home-menu {
-		margin-top: 35px;
+		margin-top: 6vw;
 	}
 	.home-menu .bg{
-		height: 190px;
+		height: 25vw;
 	}
 	.home-list{
-		padding-top: 125px;
-	}
-	.sc-type-name .sc-img{
-		right: 45px;
+		padding-top: 15vw;
 	}
   }
