--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 .App-header {
   color: white;
-  background: #e53333;
+  background: #cba16d;
   width: 100%;
   position: absolute;
   padding: 0px;
@@ -30,7 +30,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 70px;
+  top: 45px;
   overflow: auto;
   display: block;
   
