--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -128,11 +128,12 @@
 }
 
 .home-logo{
-	height: 50px;
+	/* height: 50px; */
 	/* width: 150px; */
-	/* padding: 5px 0px; */
+	padding: 5px 0px;
 	margin-left: -15px;
 	text-align: left;
+	max-width: 100px;
 }
 .home-list{
 	padding-top: 100px;
