--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -168,7 +168,7 @@
 }
 .sc-type{
 	text-align: center;
-	color: #fff;
+	color: #727272;
 	/* background-size:100% 100%; */
 	/* height: 90px; */
 }
@@ -179,7 +179,7 @@
 	height: 80px;
 	padding-top: 20px;
 	background-size: contain;
-	background-position: center;
+	background-position: bottom;
   background-repeat: no-repeat, no-repeat;
 		/* left: 50%; */
 		/* top:0;left:0;right:0;bottom:0;margin: auto; */
