--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 .code-body{
   /* background-color: #d4d0ff !important; */
-  background: linear-gradient(#D4D0FF,#D4D0FF, #E0FFDB);
+  /* background: linear-gradient(#D4D0FF,#D4D0FF, #E0FFDB); */
+  background: linear-gradient(#ff8b00,#fdc5ae,#e0ffdb);
 }
 .App-header{
   background-color: #f98e77 !important;
