--- a/src/page/hall/k3/index.css
+++ b/src/page/hall/k3/index.css
@@ -52,7 +52,7 @@
     margin: auto;
     margin-top: 10px;
     font-size: 15px;
-    color: #f4635e; ;
+    color: #8815b7; ;
 }
 .ks-kj-history{
     text-align: center;
