--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -1,26 +1,29 @@
-.App-main{
-	background: #f9f9f9;
+.App-main {
+  background: #f9f9f9;
 }
 .img-content {
-	/* height: 220px; */
-	align-items: center;
+  /* height: 220px; */
+  align-items: center;
 }
-.home-menu{
-	margin-top: 35px;
-	position: relative;
-	padding-bottom: 20px;
+.home-menu {
+  margin-top: -40px;
+  padding-top: 70px;
+
+  position: relative;
+  height: 160px;
+  background: url("../../../public/assets/bg.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
 }
-.home-menu .menu{
-	position: relative;
-	z-index: 1;
+.home-menu .menu {
+  position: relative;
+  margin-bottom: 10px;
 }
-.home-menu .bg{
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
+.adm-swiper-horizontal .adm-swiper-indicator {
+  bottom: 25px;
 }
+
 .grid-demo-item-block {
   border: solid 1px #999999;
   background: #f5f5f5;
@@ -30,39 +33,39 @@
 }
 
 .adm-tabs-tab-active {
-	color: #e80101;
+  color: #e80101;
 }
-.adm-tab-bar-item-active{
-	color: #e80101;
+.adm-tab-bar-item-active {
+  color: #e80101;
 }
 .adm-tabs-tab-line {
-	background: #e80101;
+  background: #e80101;
 }
-.adm-tabs-content{
-	padding: 0;
+.adm-tabs-content {
+  padding: 0;
 }
-.adm-tabs-header{
-	background: #fff;
+.adm-tabs-header {
+  background: #fff;
 }
-.button{
-	font-size: 35px;
-	margin-bottom: 5px;
-	color: #1e90ff;
+.button {
+  font-size: 35px;
+  margin-bottom: 5px;
+  color: #1e90ff;
 }
-.button-txt{
-	color: #1e90ff;
+.button-txt {
+  color: #1e90ff;
 }
-.button-list{
-	text-align: center;
-	padding-top: 10px;
-	padding-bottom: 5px;
-	background: #fff;
-	margin: 2px 0px;
+.button-list {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  background: #fff;
+  margin: 2px 0px;
 }
-.img-list{
-	margin: auto;
-	height: 55px;
-	width: 55px;
+.img-list {
+  margin: auto;
+  height: 55px;
+  width: 55px;
 }
 /* .app-header {
   color: white;
@@ -72,242 +75,257 @@
 	z-index: 1;
 	padding: 0px;
 } */
-.adm-nav-bar-left{
-	padding-left: 12px;
+.adm-nav-bar-left {
+  padding-left: 12px;
 }
-.adm-nav-bar-right{
-	padding-right: 12px;
+.adm-nav-bar-right {
+  padding-right: 12px;
 }
-.body-content{
-	
-	top: 45px;
-	padding-bottom: 50px;
-	position: relative;
+.body-content {
+  top: 45px;
+  padding-bottom: 50px;
+  position: relative;
 }
-.footer{
-	width: 100%;
-	position: fixed;
-	z-index: 1;
-	bottom: 0;
-	background-color: white;
-	border-top: 0.01rem solid #dcdcdc;
+.footer {
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  background-color: white;
+  border-top: 0.01rem solid #dcdcdc;
 }
-.home-hot{
-	background: unset;
-	width: 20px;
-	height: 20px;
+.home-hot {
+  background: unset;
+  width: 20px;
+  height: 20px;
 }
-.home-game-name{
-	padding-top:5px;
-	font-size: 15px;
+.home-game-name {
+  padding-top: 5px;
+  font-size: 15px;
 }
-.home-game-body{
-	margin-top: 10px;
-	padding: 20px 20px 50px;
-	background: #fff;
-}
-
-.home-game-left{
-	float: left;
-	font-size: 16px;
-	background-color: #0abbb5;
-	color: #fff;
-	line-height: 25px;
-	border-radius: 25px;
-	padding: 3px 12px;
-}
-.home-game-right{
-	float: right;
-	color: #727272;
-	line-height: 30px;
-	height: 30px;
-	font-size: 16px;
-}
-.home-game-righ-icon{
-	color: #0abbb5;
+.home-game-body {
+  padding: 10px 10px 50px;
+  background: url("../../../public/assets/contentBg.png");
+  background-repeat: repeat-y;
+  background-position: top center;
+  background-size: contain;
 }
 
-.home-logo{
-	/* height: 50px; */
-	/* width: 150px; */
-	padding: 5px 0px;
-	margin-left: -15px;
-	text-align: left;
-	max-width: 100px;
+.home-game-left {
+  float: left;
+  font-size: 16px;
+  background-color: #0abbb5;
+  color: #fff;
+  line-height: 25px;
+  border-radius: 25px;
+  padding: 3px 12px;
 }
-.home-list{
-	padding-top: 100px;
-	padding-bottom: 15px;
-	background-size: 100% 100%;
-	background-position: center;
-  	background-repeat: no-repeat, no-repeat;
+.home-game-right {
+  float: right;
+  color: #727272;
+  line-height: 30px;
+  height: 30px;
+  font-size: 16px;
+}
+.home-game-righ-icon {
+  color: #0abbb5;
+}
+
+.home-logo {
+  /* height: 50px; */
+  /* width: 150px; */
+  padding: 5px 0px;
+  margin-left: -15px;
+  text-align: left;
+  max-width: 100px;
+}
+.home-list {
+  padding-bottom: 15px;
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat, no-repeat;
 }
 .adm-tab-bar-icon-badge {
   --top: 6px !important;
 }
 
-.sc-button{
-	text-align: center;
-	font-size: 15px;
-	color: #727272;
+.sc-button {
+  text-align: center;
+  font-size: 15px;
+  color: #fff;
 }
-.sc-button-img{
-	width: 50px;
-	height: 50px;
-	margin: auto;
-	margin-bottom: 3px;
-}
-
-.sc-youhui{
-	margin: 5px;
-	margin-top: 10px;
+.sc-button-img {
+  width: 60px;
+  height: 60px;
+  margin: auto;
+  margin-bottom: 3px;
 }
 
-.sc-jxhw{
-	margin: 25px auto;
-	width: 200px;
+.sc-youhui {
+  margin-bottom: 10px;
+  padding: 20px;
 }
 
-.sc-itme{
-	padding:25px 0px 15px;
-	text-align: center;
-	border-radius: 5px;
-	background-image: url('../../../public/assets/bgItem.png');
-	background-size: 100% 100%;
-	background-position: center;
-  	background-repeat: no-repeat, no-repeat;
+.sc-jxhw {
+  margin: 25px auto;
+  width: 200px;
 }
 
-.sc-itme-img{
-	width: 90px;
-	height: 100px;
-	margin: auto;
-	margin-top: 5px;
+.sc-itme {
+  padding: 15px 0px;
+  text-align: center;
+  border-radius: 5px;
+  background-image: url("../../../public/assets/bgItem.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat, no-repeat;
 }
-.sc-itme-title{
-	font-size: 16px;
-	color: #555;
-	margin: 0 auto;
-	margin-top: 35px;
-	width: fit-content;
-	background: linear-gradient(to bottom,#d8bc9c, #cca370);
-	border-radius: 20px;
-	padding: 3px 20px;
-	color: #fff;
 
-	/* font-weight: 700; */
+.sc-itme-img {
+  width: 90px;
+  min-height: 90px;
+  margin: auto;
+  margin-top: 25px;
 }
-.sc-itme-desc{
-	font-size: 14px;
-	color: #686868;
+.sc-itme-title {
+  font-size: 16px;
+  color: #555;
+  margin: 0 auto;
+  font-weight: 600;
+  width: fit-content;
+
+  color: #fff;
+
+  /* font-weight: 700; */
 }
-.sc-type-list{
-	padding: 5px;
-	padding-bottom: 0px;
+.sc-itme-desc {
+  font-size: 14px;
+  color: #fff;
 }
-.sc-type{
-	text-align: left;
-	color: #fff;
-	/* background-size:100% 100%; */
-	/* height: 90px; */
+
+.sc-type {
+  width: 100%;
+  text-align: left;
+  color: #fff;
+  /* background-size:100% 100%; */
+  /* height: 90px; */
 }
-.sc-type-name{
-	/* margin-top: -75px; */
-	position: relative;
-	padding: 30px 20px 70px;
-	background-size: 100% 100%;
-	background-position: center;
+.sc-type-name {
+  /* margin-top: -75px; */
+  position: relative;
+  padding: 40px 20px 45px;
+  background-size: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat, no-repeat;
   color: #000;
-  z-index: 1;
-		/* left: 50%; */
-		/* top:0;left:0;right:0;bottom:0;margin: auto; */
+
+  text-align: center;
+
+  /* left: 50%; */
+  /* top:0;left:0;right:0;bottom:0;margin: auto; */
 }
-.sc-type-name .title{
-	color: #d5ac7a;
-	font-size: 20px;
-	font-weight: 600;
-	margin-bottom: 5px;
+.sc-type-name .sc-hot {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  width: 25px;
+  height: 25px;
+}
+.sc-type-name .title {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+
+  margin-bottom: 15px;
+
+  text-shadow: 0 0 14px #c906c0;
 }
 
-.sc-type-name .btn{
-	width: fit-content;
-	margin-top: 5px;
-	color: #a54100;
-	padding: 3px 10px;
-	background-size: 100% 100%;
-	background-position: center;
-  background-repeat: no-repeat, no-repeat;
+.sc-type-name .sc-img {
+  margin: 0 auto;
+  width: 80px;
 }
-.sc-type-name .sc-img{
-	position: absolute;
-	right: 13px;
-	bottom: 25px;
-	width: 70px;
-	z-index: -1;
+.sc-badge {
+  padding: 10px;
 }
-.sc-badge{
-	padding: 5px;
+.sc-item {
+  padding: 25px 0px 15px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0px 0px 7px -3px #e6048d;
 }
-.sc-item{
-	padding:25px 0px 15px;
-	text-align: center;
-	border-radius: 5px;
-	box-shadow: 0px 0px 7px -3px #cba16d;
+.sc-prev {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: #fff;
+  padding-left: 9vh;
+  padding-right: 9vh;
+  height: 200px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.sc-item-img{
-	width: 100px;
-	height: 120px;
-	margin: auto;
-	margin-top: 5px;
+.sc-prev .title {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  padding-top: 10px;
+  padding-bottom: 50px;
 }
-.sc-item-title{
-	font-size: 16px;
-	color: #555;
-	margin-bottom: 5px;
+.sc-prev .content {
+  text-indent: 30px;
 }
-.sc-item-desc{
-	font-size: 12px;
-	color: #777;
+.sc-item-img {
+  width: 100px;
+  height: 120px;
+  margin: auto;
+  margin-top: 5px;
 }
-.dy-type{
-	font-size: 18px;
-  color: #cba16d;
+.sc-item-title {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 5px;
+}
+.sc-item-desc {
+  font-size: 12px;
+  color: #777;
+}
+.dy-type {
+  font-size: 18px;
+  color: #fff;
   margin: 20px 0;
-	font-weight: bold;
-	letter-spacing: 1.5px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
 }
-.dy-type:before{
-	content: '/////';
-border-style: unset;
-border-color: unset;
-border-width: unset;
-text-align: right;
-font-size: 10px;
-color: #999;
-letter-spacing: 1.5px;
+.home-game-body .adm-grid-item {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 200px;
 }
-.dy-type:after{
-	content: '/////';
-border-style: unset;
-border-color: unset;
-border-width: unset;
-text-align: left;
-font-size: 10px;
-color: #999;
-letter-spacing: 1.5px;
+.dy-type:before {
+  content: "/////";
+  border-style: unset;
+  border-color: unset;
+  border-width: unset;
+  text-align: right;
+  font-size: 14px;
+  color: #1520f8;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+.dy-type:after {
+  content: "/////";
+  border-style: unset;
+  border-color: unset;
+  border-width: unset;
+  text-align: left;
+  font-size: 14px;
+  color: #8910b4;
+  letter-spacing: 1px;
+  font-weight: 600;
 }
 @media only screen and (min-width: 600px) {
-	.home-menu {
-		margin-top: 35px;
-	}
-	.home-menu .bg{
-		height: 190px;
-	}
-	.home-list{
-		padding-top: 125px;
-	}
-	.sc-type-name .sc-img{
-		right: 45px;
-	}
+  .sc-type-name .sc-img {
+    right: 45px;
   }
+}
