--- a/src/page/record/index.css
+++ b/src/page/record/index.css
@@ -2,6 +2,7 @@
     font-size: 16px;
     text-align: center;
     padding: 10px;
+    background: #fff;
 }
 .record-date-left{
     border-right: 2px solid #eee;
