--- a/src/page/user/index.css
+++ b/src/page/user/index.css
@@ -1,28 +1,58 @@
 .user-info{
     --border-top: 0px;
     overflow:hidden;
-    background: #e53333;
+
     color:#fff;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: flex-start;
+    margin: 10px;
+    padding: 10px;
+    background:url('../../../public/assets/bgUser.png') no-repeat 100% 100%;
+    background-position: center center;
+    background-size: 100% 100%;
+
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-bottom: 20px;
+}
+.user-data{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 15px;
+}
+.user-button{
+    min-width: 250px;
+}
+.user-info .adm-grid .name{
+    margin-right: 20px;
+    font-size: 14px;
+}
+.user-info  .adm-space-horizontal.adm-space-wrap > .adm-space-item{
+    padding-bottom: unset;
 }
 .user-name{
-    font-size: 15px;
-    margin-top: 5px;
+    font-size: 18px;
+    margin-top: 15px;
 }
 .user-balance{
-    font-size: 14px;
-    margin-top: 3px;
+    font-size: 18px;
+    margin-left: 15px;
+    margin-top: 15px;
+
+}
+.user-balance div:last-child{
+    font-size: 20px;
+
 }
 .user-img{
     float: left;
     margin:10px;
-    border: solid #fff;
+    border: 1px solid #fff;
     margin-left:15px;
 }
-.user-account{
-    float: left;
-    margin-left: 5px;
-    margin-top: 10px;
-}
+
 .user-vip{
     overflow:hidden;
     margin-top: 18px;
@@ -44,9 +74,8 @@
 }
 .user-button{
     text-align: center;
-    padding: 10px 0;
-    font-size: 18px;
-    background: #fff;
+
+    
 }
 .user-button-left{
 
@@ -60,7 +89,42 @@
 }
 
 .user-button-list{
-    margin-top: 10px;
+    margin: 10px;
+    color: #fff;
+    text-align: center;
+    padding: 20px 10px;
+    border: 1px solid #8815b7;
+    border-radius: 10px;
+    font-size: 14px;
+}
+.user-button-list .adm-image{
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+.user-menu {
+    padding: 10px 0;
+}
+.user-menu .adm-image{
+    width: 20px;
+    height: 20px;
+}
+.user-menu .adm-list-body,.user-menu .adm-list-item{
+    background-color:transparent !important;
+    text-align: left;
+    font-size: 12px;
+}
+.user-menu .adm-list-default .adm-list-body{
+    border-top: unset;
+    border-bottom: unset;
+    
+}
+.user-menu .adm-list-item-content{
+    border-color: #5c138a ;
+    align-items: center;
+    padding: 3px 15px;
+}
+.user-menu .adm-image{
+    margin-bottom: unset;
 }
 
 .user-button-logout{
@@ -69,8 +133,8 @@
     margin-bottom: 30px;
     padding: 10px 40px;
 }
-.user-button-list img{
+/* .user-button-list img{
     height: 25px;
     width: 25px;
-}
+} */
 
