--- a/src/page/user/vip/index.css
+++ b/src/page/user/vip/index.css
@@ -8,6 +8,7 @@
     padding: 12px;
     font-size: 15px;
     border-bottom: 1px solid #eee;
+    color: #fff;
 }
 .vip-my{
     text-align: center;
